; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/lib/extr_lmb.c_lmb_coalesce_regions.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/lib/extr_lmb.c_lmb_coalesce_regions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lmb_region = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lmb_region*, i64, i64)* @lmb_coalesce_regions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lmb_coalesce_regions(%struct.lmb_region* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.lmb_region*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.lmb_region* %0, %struct.lmb_region** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.lmb_region*, %struct.lmb_region** %4, align 8
  %8 = getelementptr inbounds %struct.lmb_region, %struct.lmb_region* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = load i64, i64* %6, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.lmb_region*, %struct.lmb_region** %4, align 8
  %15 = getelementptr inbounds %struct.lmb_region, %struct.lmb_region* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = load i64, i64* %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %20, %13
  store i64 %21, i64* %19, align 8
  %22 = load %struct.lmb_region*, %struct.lmb_region** %4, align 8
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @lmb_remove_region(%struct.lmb_region* %22, i64 %23)
  ret void
}

declare dso_local i32 @lmb_remove_region(%struct.lmb_region*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
